Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-13 02:20+0000\n"
+"POT-Creation-Date: 2021-07-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,7 +54,9 @@ msgstr "機能セットはさておき、dev-modeで実行されるQuarkusアプ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:24
-msgid "In dev-mode, Quarkus uses a ClassLoader hierarchy (explained in detail link:class-loading-reference.adoc[here]) that enables the live reload of user code without requiring a rebuild and restart of the application."
+#, fuzzy
+#| msgid "In dev-mode, Quarkus uses a ClassLoader hierarchy (explained in detail link:class-loading-reference.adoc[here]) that enables the live reload of user code without requiring a rebuild and restart of the application."
+msgid "In dev-mode, Quarkus uses a ClassLoader hierarchy (explained in detail link:class-loading-reference[here]) that enables the live reload of user code without requiring a rebuild and restart of the application."
 msgstr "開発モードでは、QuarkusはClassLoader階層（詳細は link:class-loading-reference.adoc[こちら]）を使用し、アプリケーションの再構築や再起動を必要とせずにユーザーコードのライブリロードを可能にしています。"
 
 #. type: Plain text
@@ -92,7 +94,9 @@ msgstr "Dev UI"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:40
-msgid "Quarkus provides a very useful link:dev-ui.adoc[UI] accessible from the browser at `/q/dev`. This UI allows a developer to see the state of the application, but also provides access to various actions that can change that state (depending on the extensions that are present).  Examples of such operations are:"
+#, fuzzy
+#| msgid "Quarkus provides a very useful link:dev-ui.adoc[UI] accessible from the browser at `/q/dev`. This UI allows a developer to see the state of the application, but also provides access to various actions that can change that state (depending on the extensions that are present).  Examples of such operations are:"
+msgid "Quarkus provides a very useful link:dev-ui[UI] accessible from the browser at `/q/dev`. This UI allows a developer to see the state of the application, but also provides access to various actions that can change that state (depending on the extensions that are present).  Examples of such operations are:"
 msgstr "Quarkusは、ブラウザからアクセスできる非常に便利な link:dev-ui.adoc[UI]を提供しています。 `/q/dev` 。このUIにより、開発者はアプリケーションの状態を確認できるだけでなく、（存在するエクステンションに応じて）その状態を変更できる様々な操作にアクセスできます。そのような操作の例は以下の通りです。"
 
 #. type: Plain text
