--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-10 02:18+0000\n"
+"POT-Creation-Date: 2021-07-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -156,7 +156,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:76
-msgid "Configure the broker location for the production profile. You can configure it globally or per channel using `mp.messaging.incoming.$channel.bootstrap.servers` property.  In dev mode and when running tests, link:kafka-dev-services.adoc[Dev Services for Kafka] automatically starts a Kafka broker.  When not provided this property defaults to `localhost:9092`."
+msgid "Configure the broker location for the production profile. You can configure it globally or per channel using `mp.messaging.incoming.$channel.bootstrap.servers` property.  In dev mode and when running tests, link:kafka-dev-services[Dev Services for Kafka] automatically starts a Kafka broker.  When not provided this property defaults to `localhost:9092`."
 msgstr ""
 
 #. type: Plain text
@@ -1134,7 +1134,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:557
-msgid "Configure the broker location for the production profile. You can configure it globally or per channel using `mp.messaging.outgoing.$channel.bootstrap.servers` property.  In dev mode and when running tests, link:kafka-dev-services.adoc[Dev Services for Kafka] automatically starts a Kafka broker.  When not provided this property defaults to `localhost:9092`."
+msgid "Configure the broker location for the production profile. You can configure it globally or per channel using `mp.messaging.outgoing.$channel.bootstrap.servers` property.  In dev mode and when running tests, link:kafka-dev-services[Dev Services for Kafka] automatically starts a Kafka broker.  When not provided this property defaults to `localhost:9092`."
 msgstr ""
 
 #. type: Plain text
@@ -2331,7 +2331,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:1166
 #: upstream/_versions/main/guides/kafka.adoc:1237
-msgid "This is described in a dedicated guide: link:kafka-schema-registry-avro.adoc[Using Apache Kafka with Schema Registry and Avro]."
+msgid "This is described in a dedicated guide: link:kafka-schema-registry-avro[Using Apache Kafka with Schema Registry and Avro]."
 msgstr ""
 
 #. type: Title ==
@@ -2481,7 +2481,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:1225
-msgid "see link:kafka-schema-registry-avro.adoc[Using Apache Kafka with Schema Registry and Avro] for more information about using Confluent or Apicurio libraries"
+msgid "see link:kafka-schema-registry-avro[Using Apache Kafka with Schema Registry and Avro] for more information about using Confluent or Apicurio libraries"
 msgstr ""
 
 #. type: Plain text
@@ -2591,7 +2591,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:1283
-msgid "This is described in a dedicated guide: link:kafka-streams.adoc[Using Apache Kafka Streams]."
+msgid "This is described in a dedicated guide: link:kafka-streams[Using Apache Kafka Streams]."
 msgstr ""
 
 #. type: Title ==
@@ -2983,7 +2983,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka.adoc:1452
-msgid "Quarkus Kafka extension supports link:deploying-to-kubernetes.adoc[Service Binding Specification for Kubernetes].  You can enable this by adding the `quarkus-kubernetes-service-binding` extension to your application."
+msgid "Quarkus Kafka extension supports link:deploying-to-kubernetes[Service Binding Specification for Kubernetes].  You can enable this by adding the `quarkus-kubernetes-service-binding` extension to your application."
 msgstr ""
 
 #. type: Plain text
