--- a/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-26 02:20+0000\n"
+"POT-Creation-Date: 2021-07-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -339,7 +339,7 @@ msgstr "開発モード"
 #: upstream/_versions/main/guides/gradle-tooling.adoc:168
 #, fuzzy
 #| msgid "Quarkus comes with a built-in development mode.  Run your application with:"
-msgid "Quarkus comes with a built-in development mode. The best way to run this is via the link:cli-tooling.adoc[Quarkus CLI] Run your application with:"
+msgid "Quarkus comes with a built-in development mode. The best way to run this is via the link:cli-tooling[Quarkus CLI] Run your application with:"
 msgstr "Quarkusには開発モードが組み込まれています。以下でアプリケーションを実行します。"
 
 #. type: delimited block -
