--- a/l10n/po/ja_JP/_versions/main/guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/grpc-service-implementation.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-10 02:18+0000\n"
+"POT-Creation-Date: 2021-07-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -578,7 +578,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/grpc-service-implementation.adoc:291
-msgid "The easiest way to test a gRPC service is to use a gRPC client as described in link:./grpc-service-consumption.adoc[Consuming a gRPC Service]."
+msgid "The easiest way to test a gRPC service is to use a gRPC client as described in link:grpc-service-consumption[Consuming a gRPC Service]."
 msgstr ""
 
 #. type: Plain text
