--- a/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-18 02:27+0000\n"
+"POT-Creation-Date: 2021-07-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,7 +32,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:15
-msgid "If you are not familiar with Kafka and Kafka in Quarkus in particular, consider first going through the link:kafka.adoc[Using Apache Kafka with Reactive Messaging] guide."
+msgid "If you are not familiar with Kafka and Kafka in Quarkus in particular, consider first going through the link:kafka[Using Apache Kafka with Reactive Messaging] guide."
 msgstr ""
 
 #. type: Title ==
@@ -931,7 +931,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:534
-msgid "If we couldn't use Dev Services and wanted to start a Kafka broker and Apicurio Registry instance manually, we would define a link:getting-started-testing.adoc#quarkus-test-resource[QuarkusTestResourceLifecycleManager]."
+msgid "If we couldn't use Dev Services and wanted to start a Kafka broker and Apicurio Registry instance manually, we would define a link:getting-started-testing#quarkus-test-resource[QuarkusTestResourceLifecycleManager]."
 msgstr ""
 
 #. type: delimited block -
