--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-13 02:20+0000\n"
+"POT-Creation-Date: 2021-07-16 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3503,5 +3503,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1907
-msgid "See link:rest-client-reactive.adoc[REST Client Reactive Guide] for more information about the reactive client."
+msgid "See link:rest-client-reactive[REST Client Reactive Guide] for more information about the reactive client."
 msgstr ""
