Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-extending-support.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-14 02:17+0000\n"
+"POT-Creation-Date: 2021-07-17 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -321,7 +321,7 @@ msgstr ""
 #| msgid "import org.eclipse.microprofile.config.spi.Converter;\n"
 msgid ""
 "import org.eclipse.microprofile.config.spi.ConfigSource;\n"
-"import io.quarkus.runtime.configuration.StaticInitSafe;\n"
+"import io.quarkus.runtime.annotations.StaticInitSafe;\n"
 msgstr "import org.eclipse.microprofile.config.spi.Converter;\n"
 
 #. type: delimited block -
