--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-fault-tolerance.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-25 02:33+0000\n"
+"POT-Creation-Date: 2021-07-17 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -851,7 +851,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:508
-msgid "SmallRye Fault Tolerance has more features than shown here.  Please check the link:https://smallrye.io/docs/smallrye-fault-tolerance/5.1.0/index.html[SmallRye Fault Tolerance documentation] to learn about them."
+msgid "SmallRye Fault Tolerance has more features than shown here.  Please check the link:https://smallrye.io/docs/smallrye-fault-tolerance/5.2.0/index.html[SmallRye Fault Tolerance documentation] to learn about them."
 msgstr ""
 
 #. type: Plain text
@@ -861,12 +861,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:512
-msgid "Support for Mutiny is present, so your `@Asynchronous` methods can return `Uni`."
+msgid "Support for Mutiny is present, so your asynchronous methods can return `Uni` in addition to `CompletionStage`."
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:514
-msgid "MicroProfile Context Propagation is integrated with Fault Tolerance, so existing contexts are automatically propagated to your `@Asynchronous` methods."
+msgid "MicroProfile Context Propagation is integrated with Fault Tolerance, so existing contexts are automatically propagated to your asynchronous methods."
 msgstr ""
 
 #. type: delimited block =
@@ -877,4 +877,20 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:522
 msgid "We believe that in presence of MicroProfile Context Propagation, this requirement should not apply.  The entire point of context propagation is to make sure the new thread has the same contexts as the original thread."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:525
+msgid "Non-compatible mode is enabled by default, so methods that return `CompletionStage` (or `Uni`) have asynchronous fault tolerance applied without any `@Asynchronous`, `@Blocking` or `@NonBlocking` annotation."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:530
+msgid "This mode is not compatible with the MicroProfile Fault Tolerance specification, albeit the incompatibility is very small.  To restore full compatibility, add this configuration property:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:534
+#, no-wrap
+msgid "smallrye.faulttolerance.mp-compatibility=true\n"
 msgstr ""
