Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-10 02:19+0000\n"
+"POT-Creation-Date: 2021-07-19 02:20+0000\n"
 "PO-Revision-Date: 2021-05-12 14:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1494,7 +1494,7 @@ msgstr "smallrye.jwt.time-to-liv"
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:685
 #, no-wrap
-msgid "The maximum number of seconds that a JWT may be issued for use. Effectively, the difference between the expiration date of the JWT and the issued at date must not exceed this value."
+msgid "The maximum number of seconds that a JWT may be issued for use. Effectively, the difference between the expiration date of the JWT and the issued at date must not exceed this value. Setting this property to a non-positive value relaxes the requirement for the token to have a valid 'iat' (issued at) claim."
 msgstr ""
 
 #. type: Table
