--- a/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
@@ -3,31 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-07-07 08:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-07-19 11:23+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/continuous-testing.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Continuous Testing"
-msgstr "Quarkus - 継続的なテスト"
+msgstr "Quarkus - 継続的テスト"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:21
-#, fuzzy
 msgid "Learn how to use continuous testing in your Quarkus Application."
 msgstr "Quarkusアプリケーションで継続的テストを使用する方法について説明します。"
 
@@ -44,7 +43,6 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:27
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分未満"
 
@@ -55,9 +53,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:29
-#, fuzzy
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 11+をインストールし、 `JAVA_HOME` を適切に設定する。"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:30
@@ -77,9 +74,8 @@ msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:37
-#, fuzzy
 msgid "Quarkus supports continuous testing, where tests run immediately after code changes have been saved. This allows you to get instant feedback on your code changes. Quarkus detects which tests cover which code, and uses this information to only run the relevant tests when code is changed."
-msgstr "Quarkusは継続的なテストをサポートしており、コードの変更が保存された直後にテストが実行されます。これにより、コードの変更に対するフィードバックを即座に得ることができます。Quarkusは、どのテストがどのコードをカバーしているかを検出し、この情報を使用して、コードが変更されたときに関連するテストのみを実行します。"
+msgstr "Quarkusは継続的テストをサポートしており、コードの変更が保存された直後にテストが実行されます。これにより、コードの変更に対するフィードバックを即座に得ることができます。Quarkusは、どのテストがどのコードをカバーしているかを検出し、この情報を使用して、コードが変更されたときに関連するテストのみを実行します。"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:38
@@ -89,7 +85,6 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:42
-#, fuzzy
 msgid "Start the link:getting-started[Getting Started] application (or any other application) using `mvn quarkus:dev`. Quarkus will start in development mode as normal, but down the bottom of the screen you should see the following:"
 msgstr "`mvn quarkus:dev` を使用して、 link:getting-started[Getting Started]アプリケーション（またはその他のアプリケーション）を起動します。Quarkusは通常通り開発モードで起動しますが、画面の下部には以下のように表示されています。"
 
@@ -99,7 +94,7 @@ msgstr "`mvn quarkus:dev` を使用して、 link:getting-started[Getting Starte
 #: upstream/_guides/continuous-testing.adoc:80
 #, no-wrap
 msgid "--\n"
-msgstr ""
+msgstr "--\n"
 
 #. type: delimited block -
 #: upstream/_guides/continuous-testing.adoc:47
@@ -108,7 +103,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:51
-#, fuzzy
 msgid "Press `r` and the tests will start running. You should see the status change down the bottom of the screen as they are running, and it should finish with:"
 msgstr "`r` を押すと、テストの実行が始まります。テストが実行されている間、画面の下の方でステータスが変化し、次のように終了するはずです。"
 
@@ -119,15 +113,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:62
-#, fuzzy
 msgid "If you want continuous testing to start automatically you can set `quarkus.test.continuous-testing=enabled` in `application.properties`. If you don't want it at all you can change this to `disabled`."
-msgstr "継続的なテストを自動的に開始させたい場合は、 `application.properties` で `quarkus.test.continuous-testing=enabled` を設定します。全く必要ない場合は、これを `disabled` に変更できます。"
+msgstr "継続的テストを自動的に開始させたい場合は、 `application.properties` で `quarkus.test.continuous-testing=enabled` を設定します。全く必要ない場合は、これを `disabled` に変更できます。"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:67
-#, fuzzy
 msgid "Now you can start making changes to your application. Go into the `GreetingResource` and change the hello endpoint to return `\"hello world\"`, and save the file. Quarkus should immediately re-run the test, and you should get output similar to the following:"
-msgstr "これで、アプリケーションの変更を開始できます。 `GreetingResource` に入り、helloエンドポイントを `\"hello world\"` を返すように変更し、ファイルを保存します。Quarkusはすぐにテストを再実行し、以下のような出力が得られるはずです。"
+msgstr "これで、アプリケーションの変更を開始できます。 `GreetingResource` を開き、helloエンドポイントを `\"hello world\"` を返すように変更し、ファイルを保存します。Quarkusはすぐにテストを再実行し、以下のような出力が得られるはずです。"
 
 #. type: delimited block -
 #: upstream/_guides/continuous-testing.adoc:75
@@ -155,21 +147,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:86
-#, fuzzy
 msgid "Change it back and the tests will run again."
 msgstr "これを元に戻すと、テストが再び実行されます。"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:87
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Controlling Continuous Testing"
-msgstr "継続的なテストをコントロールする"
+msgstr "継続的なテストのコントロール"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:91
-#, fuzzy
 msgid "There are various hotkeys you can use to control continuous testing. Pressing `h` will display the following list of commands:"
-msgstr "連続テストを制御するために使用できる様々なホットキーがあります。 `h` を押すと、次のようなコマンドの一覧が表示されます。"
+msgstr "連続テストをコントロールするために使用できる様々なホットキーがあります。 `h` を押すと、次のようなコマンドの一覧が表示されます。"
 
 #. type: delimited block -
 #: upstream/_guides/continuous-testing.adoc:106
@@ -191,144 +181,131 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:109
-#, fuzzy
 msgid "These are explained below:"
 msgstr "以下にその内容をご紹介します。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:110
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[r] - Re-run all tests"
-msgstr "[r] - すべてのテストを再実行する"
+msgstr "[r] - Re-run all tests"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:112
-#, fuzzy
 msgid "This will re-run every test"
 msgstr "これは、すべてのテストを再実行します。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:113
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[f] - Re-run failed tests"
-msgstr "f] - 失敗したテストを再実行する"
+msgstr "[f] - Re-run failed tests"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:115
-#, fuzzy
 msgid "This will re-run every failing test"
 msgstr "これは、失敗したすべてのテストを再実行します。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:116
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[b] - Toggle 'broken only' mode, where only failing tests are run"
-msgstr "[b] - 失敗したテストだけを実行する「失敗のみ」モードを切り替えます。"
+msgstr "[b] - Toggle 'broken only' mode, where only failing tests are run"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:120
-#, fuzzy
 msgid "Broken only mode will only run tests that have previously failed, even if other tests would normally be affected by a code change. This can be useful if you are modifying code that is used by lots of tests, but you only want to focus on debugging the failing one."
 msgstr "Broken only モードでは、コードの変更によって他のテストが影響を受ける場合でも、 過去に失敗したテストのみを実行します。これは、多くのテストで使用されているコードを変更する際に、 失敗したテストのデバッグだけに集中したい場合などに便利です。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:121
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[v] - Print failures from the last test run"
-msgstr "[v] - 直近のテスト実行の失敗を印刷する"
+msgstr "[v] - Print failures from the last test run"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:123
-#, fuzzy
 msgid "Prints the failures to the console again, this can be useful if there has been lots of console output since the last run."
-msgstr "これは、前回の実行後に大量のコンソール出力があった場合に役立ちます。"
+msgstr "失敗をコンソールに再表示します。これは、前回の実行後に大量のコンソール出力があった場合に役立ちます。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:124
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[p] - Pause tests"
-msgstr "p] - テストを一時停止する"
+msgstr "[p] - Pause tests"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:127
-#, fuzzy
 msgid "Temporarily stops running tests. This can be useful if you are making lots of changes, and don't want feedback until they are all done."
 msgstr "テストの実行を一時的に停止します。これは、多くの変更を行っていて、すべてが完了するまでフィードバックを得たくない場合に便利です。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:128
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[o] - Toggle test output"
-msgstr "[o] - テスト出力を切り替える"
+msgstr "[o] - Toggle test output"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:132
-#, fuzzy
 msgid "By default test output is filtered and not displayed on the console, so that test output and dev mode output is not interleaved. Enabling test output will print output to the console when tests are run. Even when output is disabled the filtered output is saved and can be viewed in the Dev UI."
 msgstr "デフォルトでは、テスト出力はフィルタリングされ、コンソールには表示されないので、テスト出力とdevモードの出力が混在することはありません。テスト出力を有効にすると、テストが実行されたときに出力がコンソールに表示されます。出力を無効にした場合でも、フィルタリングされた出力は保存され、開発UIで見ることができます。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:133
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[i] - Toggle instrumentation based reload"
-msgstr "i] - インスツルメンテーションベースのリロードを切り替える"
+msgstr "[i] - Toggle instrumentation based reload"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:137
-#, fuzzy
 msgid "This is not directly related to testing, but allows you to toggle instrumentation based reload. This will allow live reload to avoid a restart if a change does not affect the structure of a class, which gives a faster reload and allows you to keep state."
 msgstr "これはテストとは直接関係ありませんが、インスツルメンテーションベースのリロードを切り替えることができます。これにより、クラスの構造に影響を与えない変更の場合、再起動を避けるためにライブリロードが可能になり、リロードが速くなり、状態を維持することができます。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:138
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[l] - Toggle live reload"
-msgstr "[l] - ライブリロードを切り替える"
+msgstr "[l] - Toggle live reload"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:140
-#, fuzzy
 msgid "This is not directly related to testing, but allows you to turn live reload on and off."
 msgstr "これはテストとは直接関係ありませんが、ライブリロードのオン/オフを切り替えることができます。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:141
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "[s] - Force restart"
-msgstr "s] - ライブリロードスキャンを強制する"
+msgstr "[s] - Force restart"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:144
-#, fuzzy
 msgid "This will force a scan for changed files, and will perform a live reload with and changes. Note that even if there are no changes the application will still restart. This will still work even if live reload is disabled."
-msgstr "これにより、変更されたファイルを強制的にスキャンし、何か変更があればライブリロードを実行します。ライブリロードが無効になっていても、この機能は動作します。"
+msgstr "これにより、変更されたファイルを強制的にスキャンし、変更に対してライブリロードを実行します。ライブリロードが無効になっていても、この機能は動作します。"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:145
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Continuous Testing Without Dev Mode"
 msgstr "開発モードを使わない継続的なテスト"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:150
-#, fuzzy
 msgid "It is possible to run continuous testing without starting dev mode. This can be useful if dev mode will interfere with your tests (e.g. running wiremock on the same port), or if you only want to develop using tests. To start continuous testing mode run `mvn quarkus:test`."
-msgstr "devモードを起動せずに、継続的なテストを行うことができます。これは、開発モードがテストの妨げになる場合 (同じポートで wiremock を実行している場合など) や、テストだけを使って開発したい場合などに便利です。継続的テストモードを開始するには、 `mvn quarkus:test`."
+msgstr "devモードを起動せずに、継続的なテストを行うことができます。これは、開発モードがテストの妨げになる場合 (同じポートで wiremock を実行している場合など) や、テストだけを使って開発したい場合などに便利です。継続的テストモードを開始するには、 `mvn quarkus:test` を実行します。"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:152
-#, fuzzy
 msgid "The Dev UI is not available when running in continuous testing mode, as this is provided by dev mode."
 msgstr "Dev UIはdevモードで提供されているため、継続的テストモードで実行している場合は利用できません。"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:153
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring Continuous Testing"
 msgstr "継続的テストの設定"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:157
-#, fuzzy
 msgid "Continuous testing supports multiple configuration options that can be used to limit the tests that are run, and to control the output. The configuration properties are shown below:"
 msgstr "継続的テストでは、実行するテストを制限したり、出力を制御したりするために使用できる複数の設定オプションをサポートしています。設定項目は以下のとおりです。"
