--- a/l10n/po/ja_JP/_guides/config-yaml.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-yaml.adoc.po
@@ -3,51 +3,48 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-30 15:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-07-19 12:48+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/config-yaml.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "YAML Configuration"
-msgstr "YAML構成"
+msgstr "YAML設定"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:14
-#, fuzzy
 msgid "https://en.wikipedia.org/wiki/YAML[YAML] is a very popular format. Kubernetes relies heavily on the YAML format to write the various resource descriptors."
 msgstr "link:https://en.wikipedia.org/wiki/YAML[YAML]はとても人気のあるフォーマットです。Kubernetesは、さまざまなリソース記述子を記述するためにYAMLフォーマットに大きく依存しています。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:16
-#, fuzzy
 msgid "Quarkus offers the possibility to use YAML in addition to the standard Java Properties file."
 msgstr "Quarkusでは、標準のJavaプロパティファイルに加えてYAMLを使用することができます。"
 
 #. type: Title ==
 #: upstream/_guides/config-yaml.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Enabling YAML Configuration"
 msgstr "YAML設定の有効化"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:20
-#, fuzzy
 msgid "To enable YAML configuration add the `quarkus-config-yaml` extension:"
-msgstr "YAMLの設定を有効にするには、 `quarkus-config-yaml` 拡張機能を追加します。"
+msgstr "YAML設定を有効にするには、 `quarkus-config-yaml` エクステンションを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/config-yaml.adoc:25
@@ -59,9 +56,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:28
-#, fuzzy
 msgid "You can also just add the following dependency into your project:"
-msgstr "また、以下の依存関係をプロジェクトに追加することもできます。"
+msgstr "また、以下の依存関係をプロジェクトに追加することでもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/config-yaml.adoc:35
@@ -79,19 +75,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:38
-#, fuzzy
 msgid "Remove the `src/main/resources/application.properties` and create a `src/main/resources/application.yaml` file."
 msgstr "`src/main/resources/application.properties` を削除し、 `src/main/resources/application.yaml` のファイルを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:41
-#, fuzzy
 msgid "If both are present, Quarkus prioritizes configuration properties from the YAML file first and then from the Properties file. However, to avoid confusion, we recommend removing the Properties file."
-msgstr "両方が存在する場合、QuarkusはまずYAMLファイルからの設定プロパティを優先し、次にPropertiesファイルからの設定プロパティを優先します。ただし、混乱を避けるため、Propertiesファイルを削除することをお勧めします。"
+msgstr "両方が存在する場合、QuarkusはまずYAMLファイルからの設定プロパティを優先し、次にPropertiesファイルからの設定プロパティを読み込みます。ただし、混乱を避けるため、Propertiesファイルを削除することをお勧めします。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:43
-#, fuzzy
 msgid "Supports both the `yml` or `yaml` file extensions."
 msgstr "`yml` または `yaml` の両方のファイル拡張子に対応しています。"
 
@@ -103,7 +96,6 @@ msgstr "例"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:47
-#, fuzzy
 msgid "The following snippets provide examples of YAML configuration:"
 msgstr "次のスニペットは、YAML設定の例です。"
 
@@ -137,7 +129,7 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/config-yaml.adoc:72
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "# For configuration property names that use quotes, do not split the string inside the quotes\n"
 "quarkus:\n"
@@ -211,25 +203,22 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/config-yaml.adoc:109
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Profiles"
-msgstr "プロフィール"
+msgstr "プロファイル"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:113
-#, fuzzy
 msgid "As you can see in the previous snippet, you can use xref:config-reference.adoc#profiles[profiles] in YAML. The profile key requires double quotes: `\"%test\"`. This is because YAML does not support keys starting with `%`."
 msgstr "先ほどのスニペットでもわかるように、YAMLで link:config-reference.html#profiles[プロファイル]を使うことができます。プロファイルのキーには二重引用符が必要です: `\"%test\"`.これはYAMLが `%` で始まるキーをサポートしていないためです。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:116
-#, fuzzy
 msgid "Everything under the `\"%test\"` key is only enabled when the `test` profile is active. For example, in the previous snippet it disables OIDC (`quarkus.oidc.enabled: false`), whereas without the `test` profile, it would be enabled."
 msgstr "`\"%test\"` キーの下にあるすべてのものは、 `test` プロファイルがアクティブな場合にのみ有効です。例えば、前述のスニペットでは、OIDC ( `quarkus.oidc.enabled: false`) を無効にしていますが、 `test` プロファイルがなければ、有効になります。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:118
-#, fuzzy
 msgid "As for the Java Properties format, you can define your own profile:"
 msgstr "Javaプロパティ形式については、独自のプロファイルを定義することができます。"
 
@@ -254,25 +243,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:132
-#, fuzzy
 msgid "If you enable the `staging` profile, the HTTP port will be 8082, whereas it would be 8081 otherwise."
 msgstr "`staging` プロファイルを有効にした場合、HTTP ポートは 8082 になりますが、そうでない場合は 8081 になります。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:135
-#, fuzzy
 msgid "The YAML configuration also support profile aware files. In this case, properties for a specific profile may reside in an `application-{profile}.yaml` named file. The previous example may be expressed as:"
-msgstr "YAML構成では、プロファイルを意識したファイルにも対応しています。この場合、特定のプロファイルのプロパティは、 `application-{profile}.yaml` という名前のファイルに格納されます。先ほどの例は次のように表現できます。"
+msgstr "YAML設定では、プロファイルのためのファイルにも対応しています。この場合、特定のプロファイルのプロパティは、 `application-{profile}.yaml` という名前のファイルに格納されます。先ほどの例は次のように表現できます。"
 
 #. type: Block title
 #: upstream/_guides/config-yaml.adoc:136
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "application.yaml"
 msgstr "application.yaml"
 
 #. type: Block title
 #: upstream/_guides/config-yaml.adoc:144
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "application-staging.yaml"
 msgstr "application-staging.yaml"
 
@@ -293,9 +280,8 @@ msgstr "式"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:156
-#, fuzzy
 msgid "The YAML format also supports xref:config-reference.adoc#expressions[expressions], using the same format as Java Properties:"
-msgstr "YAMLフォーマットは、Javaプロパティと同じフォーマットを使用した link:config-reference.html#expressions[式]もサポートしています。"
+msgstr "YAMLフォーマットは、Javaプロパティと同じフォーマットを使用した xref:config-reference.adoc#expressions[式] もサポートしています。"
 
 #. type: delimited block -
 #: upstream/_guides/config-yaml.adoc:162
@@ -319,21 +305,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:171
-#, fuzzy
 msgid "Note that you can reference nested properties using the `.` (dot) separator as in `{x.factor}`."
 msgstr "なお、 `{x.factor}` のように、 `.` （ドット）セパレータを使って、ネストしたプロパティを参照することができます。"
 
 #. type: Title ==
 #: upstream/_guides/config-yaml.adoc:172
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "External application.yaml file"
-msgstr "外部のapplication.yamlファイル"
+msgstr "外部application.yamlファイル"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:176
-#, fuzzy
 msgid "The `application.yaml` file may also be placed in `config/application.yaml` to specialize the runtime configuration. The file has to be present in the root of the working directoryrelative to the Quarkus application runner:"
-msgstr "`application.yaml` ファイルは、ランタイム構成を特殊化するために `config/application.yaml` にも配置することができます。このファイルは、Quarkusアプリケーションランナーに関連する作業ディレクトリのルートに存在しなければなりません。"
+msgstr "`application.yaml` ファイルは、実行時設定をカスタマイズするために `config/application.yaml` に配置することもできます。このファイルは、Quarkusアプリケーションランナーに関連する作業ディレクトリのルートに存在しなければなりません。"
 
 #. type: delimited block -
 #: upstream/_guides/config-yaml.adoc:183
@@ -347,7 +331,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:186
-#, fuzzy
 msgid "The values from this file override any values from the regular `application.yaml` file if exists."
 msgstr "このファイルの値は、通常の `application.yaml` ファイルが存在する場合、そちらの値よりも優先されます。"
 
@@ -359,13 +342,11 @@ msgstr "設定キーの競合"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:193
-#, fuzzy
 msgid "The MicroProfile Config specification defines configuration keys as an arbitrary `.`-delimited string. However, structured formats like YAML only support a subset of the possible configuration namespace. For example, consider the two configuration properties `quarkus.http.cors` and `quarkus.http.cors.methods`. One property is the prefix of another, so it may not be immediately evident how to specify both keys in your YAML configuration."
 msgstr "MicroProfile Configの仕様では、設定キーを任意の `.` 区切りの文字列として定義しています。しかし、YAMLのような構造化されたフォーマットでは、可能な構成の名前空間のサブセットしかサポートしていません。例えば、2つの構成プロパティ `quarkus.http.cors` と `quarkus.http.cors.methods` を考えてみましょう。1つのプロパティは別のプロパティのプレフィックスであるため、YAML設定で両方のキーを指定する方法はすぐにはわからないかもしれません。"
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:195
-#, fuzzy
 msgid "This is solved by using a `null` key (represented by `~`) for any YAML property which is a prefix of another one:"
 msgstr "これは、別のプロパティのプレフィックスであるYAMLプロパティに `null` キー（ `~` で表される）を使用することで解決します。"
 
@@ -387,6 +368,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/config-yaml.adoc:206
-#, fuzzy
 msgid "YAML `null` keys are not included in the assembly of the configuration property name, allowing them to be used in any level for disambiguating configuration keys."
-msgstr "YAML `null` キーは、構成プロパティ名のアセンブリには含まれないため、構成キーの曖昧さを解消するために任意のレベルで使用することができます。"
+msgstr "YAML `null` キーは、設定プロパティ名の組み合わせには含まれないため、設定キーの曖昧さを解消するために任意のレベルで使用することができます。"
