Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-16 02:17+0000\n"
+"POT-Creation-Date: 2021-07-20 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2744,7 +2744,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "`ParsedPersistenceXmlDescriptor descriptor` :: +++<i>No Javadoc found</i>+++\n"
-"`String dataSource` :: +++<i>No Javadoc found</i>+++\n"
+"`Optional dataSource` :: +++<i>No Javadoc found</i>+++\n"
 "`MultiTenancyStrategy multiTenancyStrategy` :: +++<i>No Javadoc found</i>+++\n"
 "`String multiTenancySchemaDataSource` :: +++<i>No Javadoc found</i>+++\n"
 "`List xmlMappings` :: +++<i>No Javadoc found</i>+++\n"
