--- a/l10n/po/ja_JP/_versions/main/guides/amqp.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amqp.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-16 02:21+0000\n"
+"POT-Creation-Date: 2021-07-20 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -339,13 +339,9 @@ msgstr ""
 msgid "@RegisterForReflection"
 msgstr ""
 
-#. type: delimited block -
+#. type: delimited block =
 #: upstream/_versions/main/guides/amqp.adoc:168
-#, no-wrap
-msgid ""
-"The `@RegisterForReflection` annotation instructs Quarkus to include the class (including fields and methods) when building the native executable.\n"
-"This will be useful later when we run the applications as native executables inside containers.\n"
-"Without, the native compilation would remove the fields and methods during the dead-code elimination phase.\n"
+msgid "The `@RegisterForReflection` annotation instructs Quarkus to include the class (including fields and methods) when building the native executable.  This will be useful later when we run the applications as native executables inside containers.  Without, the native compilation would remove the fields and methods during the dead-code elimination phase."
 msgstr ""
 
 #. type: Title ==
