Add some translations

--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-30 15:11+0000\n"
-"PO-Revision-Date: 2021-03-20 00:03+0900\n"
+"PO-Revision-Date: 2021-07-20 15:46+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -104,9 +104,8 @@ msgstr "CRON 式で使用される構文は `quarkus.scheduler.cron-type` プロ
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:59
-#, fuzzy
 msgid "The `cron` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that \"{property.path}\" style expressions are still supported but don't offer the full functionality of Property Expressions.)"
-msgstr "`cron` 属性は、デフォルト値やネストされたProperty Expressionを含む link:config-reference.html#using_property_expressions[Property]Expressionをサポートしています。(なお、\"{property.path}\"スタイルの表現もサポートされていますが、Property Expressionsの完全な機能は提供されていません)。"
+msgstr "`cron` 属性は、デフォルト値やネストされたプロパティ式を含む <<config-reference#using_property_expressions,プロパティ式>> をサポートしています。(なお、\"{property.path}\"スタイルの表現もサポートされていますが、プロパティ式の完全な機能は提供されていません)。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:61
@@ -124,7 +123,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:69
-#, fuzzy
 msgid "If you wish to disable a specific scheduled method, you can set its cron expression to `\"off\"` or `\"disabled\"`."
 msgstr "特定のスケジュールメソッドを無効にしたい場合は、そのcron式を `\"off\"` または `\"disabled\"` に設定します。"
 
@@ -142,16 +140,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:77
-#, fuzzy
 msgid "Property Expressions allow you to define a default value that is used, if the property is not configured."
 msgstr "プロパティ式では、そのプロパティが構成されていない場合に使用されるデフォルト値を定義することができます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:78
-#, fuzzy, no-wrap
-#| msgid "CRON Config Property Example"
+#, no-wrap
 msgid "CRON Config Property Example with default `0 0 15 ? * MON *`"
-msgstr "CRON設定プロパティーの例"
+msgstr "デフォルト値が `0 0 15 ? * MON *` のCRON設定プロパティーの例"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:83
@@ -163,7 +159,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:86
-#, fuzzy
 msgid "If the property `myMethod.cron.expr` is undefined or `null`, the default value (`0 0 15 ? * MON *`) will be used."
 msgstr "プロパティ `myMethod.cron.expr` が未定義または `null` の場合は、デフォルト値（ `0 0 15 ? * MON *` ）が使用されます。"
 
@@ -215,16 +210,14 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:113
-#, fuzzy
 msgid "Intervals can be disabled by setting their value to `\"off\"` or `\"disabled\"`.  So for example a Property Expression with the default value `\"off\"` can be used to disable the trigger if its Config Property has not been set."
 msgstr "Intervals は、その値を `\"off\"` または `\"disabled\"` に設定することで無効にすることができます。そのため、例えば、デフォルト値 `\"off\"` のProperty Expressionは、そのConfig Propertyが設定されていない場合、トリガーを無効にするために使用することができます。"
 
 #. type: Block title
 #: upstream/_guides/scheduler-reference.adoc:114
-#, fuzzy, no-wrap
-#| msgid "Interval Config Property Example"
+#, no-wrap
 msgid "Interval Config Property Example with a Default Value"
-msgstr "インターバル設定プロパティーの例"
+msgstr "デフォルト値のあるインターバル設定プロパティーの例"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:119
@@ -322,8 +315,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:172
-#, fuzzy
-#| msgid "If `@Scheduled#delay()` is set to a value greater then zero the value of `@Scheduled#delayed()` is ignored."
 msgid "If `@Scheduled#delay()` is set to a value greater than zero the value of `@Scheduled#delayed()` is ignored."
 msgstr "`@Scheduled#delay()` がゼロよりも大きい値に設定されている場合、 `@Scheduled#delayed()` の値は無視されます。"
 
@@ -386,8 +377,6 @@ msgstr "スケジューラー"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:205
-#, fuzzy
-#| msgid "Quarkus provides a built-in bean of type `io.quarkus.scheduler.Scheduler` that can be injected and used to pause/resume the scheduler."
 msgid "Quarkus provides a built-in bean of type `io.quarkus.scheduler.Scheduler` that can be injected and used to pause/resume the scheduler and individual scheduled methods identified by a specific `Scheduled#identity()`."
 msgstr "Quarkusは、 `io.quarkus.scheduler.Scheduler` 型のビルトインBeanを提供しており、これを注入してスケジューラーを一時停止/再開するために使用することができます。"
 
@@ -440,13 +429,11 @@ msgstr "すべてのトリガーを一時停止します。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:229
-#, fuzzy
 msgid "Pause a specific scheduled method by its identity"
-msgstr "特定のスケジューリングされたメソッドをそのIDで一時停止する"
+msgstr "スケジュールされた特定のメソッドをそのIDで一時停止する"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:230
-#, fuzzy
 msgid "Resume a specific scheduled method by its identity"
 msgstr "スケジュールされた特定のメソッドを、そのIDで再開する"
 
