--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-07-07 08:10+0000\n"
-"PO-Revision-Date: 2021-04-22 21:35+0900\n"
+"PO-Revision-Date: 2021-07-20 15:55+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -337,10 +337,8 @@ msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:168
-#, fuzzy
-#| msgid "Quarkus comes with a built-in development mode.  Run your application with:"
 msgid "Quarkus comes with a built-in development mode. The best way to run this is via the link:cli-tooling.adoc[Quarkus CLI] Run your application with:"
-msgstr "Quarkusには開発モードが組み込まれています。以下でアプリケーションを実行します。"
+msgstr "Quarkusには開発モードが組み込まれています。実行するベストな方法は link:cli-tooling.adoc[Quarkus CLI] です。以下でアプリケーションを実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/gradle-tooling.adoc:172
@@ -350,7 +348,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:175
-#, fuzzy
 msgid "If you don't want to install the Quarkus CLI you can run development mode directly from gradle:"
 msgstr "Quarkus CLIをインストールしたくない場合は、gradleから直接開発モードを実行できます。"
 
@@ -362,9 +359,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:183
-#, fuzzy
 msgid "Note that if you run it this way the continuous testing experience will not be as nice, as gradle runs as a daemon Quarkus can't draw the 'pretty' test output so falls back to just logging the output."
-msgstr "gradleはデーモンとして実行されるため、Quarkusは「きれいな」テスト出力を描くことができず、出力のログを取るだけになってしまうからです。"
+msgstr "この方法で実行する場合、継続的テストの使い勝手は同じにはなりません。gradleはデーモンとして実行されるため、Quarkusは「きれいな」テスト出力を描くことができず、出力のログを取るだけになってしまうからです。"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:187
