Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-07 02:19+0000\n"
+"POT-Creation-Date: 2021-07-21 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1102,7 +1102,9 @@ msgstr "名前付きデータソース"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:513
-msgid "When using DevServices the default datasource will always be created, but to specify a named datasource you need to have at least one build time property so Quarkus knows to create the datasource. In general you will usually either specify the `db-kind` property, or explicitly enable DevDb: `quarkus.datasource.\"named\".devservices=true`."
+#, fuzzy
+#| msgid "When using DevServices the default datasource will always be created, but to specify a named datasource you need to have at least one build time property so Quarkus knows to create the datasource. In general you will usually either specify the `db-kind` property, or explicitly enable DevDb: `quarkus.datasource.\"named\".devservices=true`."
+msgid "When using DevServices the default datasource will always be created, but to specify a named datasource you need to have at least one build time property so Quarkus knows to create the datasource. In general you will usually either specify the `db-kind` property, or explicitly enable DevDb: `quarkus.datasource.\"name\".devservices.enabled=true`."
 msgstr "DevServicesを使用する場合、デフォルトのデータソースは常に作成されますが、名前付きのデータソースを指定するには、Quarkusがデータソースの作成を認識できるように、少なくとも1つのビルド時プロパティが必要です。一般的には、 `db-kind` プロパティを指定するか、明示的にDevDb: `quarkus.datasource.\"named\".devservices=true` を有効にします。"
 
 #. type: Title ==
