--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-10 02:18+0000\n"
+"POT-Creation-Date: 2021-07-21 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -846,8 +846,8 @@ msgstr "また、ディスカバリーエンドポイントが利用できない
 msgid ""
 "quarkus.oidc.auth-server-url=http://localhost:8180/auth/realms/quarkus\n"
 "quarkus.oidc.discovery-enabled=false\n"
-"# Token endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens\n"
-"quarkus.oidc.token-path=/protocol/openid-connect/tokens\n"
+"# Token endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/token\n"
+"quarkus.oidc.token-path=/protocol/openid-connect/token\n"
 "# JWK set endpoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/certs\n"
 "quarkus.oidc.jwks-path=/protocol/openid-connect/certs\n"
 "# UserInfo endoint: http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/userinfo\n"
@@ -1632,6 +1632,11 @@ msgid "link:security-openid-connect-client[Quarkus - Using OpenID Connect and OA
 msgstr "マルチテナントへの対応方法については、 link:security-openid-connect-multitenancy[OpenID Connectマルチテナンシーの利用] ガイドをお読みください。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-openid-connect.adoc:920
+#: upstream/_versions/main/guides/security-openid-connect.adoc:921
+msgid "link:security-openid-connect-dev-services[Dev Services for OpenId Connect]"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/security-openid-connect.adoc:921
 msgid "link:security[Quarkus Security]"
 msgstr "link:security[Quarkus Security]"
