--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-18 02:25+0000\n"
+"POT-Creation-Date: 2021-07-21 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -157,7 +157,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:77
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices[quarkus.datasource.\"datasource-name\".devservices]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.enabled]]`link:#quarkus-datasource-config-group-data-source-runtime-config_quarkus.datasource.-datasource-name-.devservices.enabled[quarkus.datasource.\"datasource-name\".devservices.enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
