--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-11 02:54+0000\n"
+"POT-Creation-Date: 2021-07-21 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -159,3 +159,21 @@ msgstr ""
 #, no-wrap
 msgid "int"
 msgstr "int"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc:80
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.properties-properties]]`link:#quarkus-mongodb-mongo-client-build-time-config_quarkus.mongodb.devservices.properties-properties[quarkus.mongodb.devservices.properties]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Generic properties that are added to the connection URL.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-mongodb-mongo-client-build-time-config.adoc:81
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
