Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-21 02:18+0000\n"
+"POT-Creation-Date: 2021-07-22 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -38977,8 +38977,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:25273
-#, no-wrap
-msgid "`io.quarkus`"
+#, fuzzy, no-wrap
+#| msgid "`io.quarkus`"
+msgid "`io.quarkus.platform`"
 msgstr "`io.quarkus`"
 
 #. type: Table
@@ -38995,8 +38996,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-config.adoc:25282
-#, no-wrap
-msgid "`quarkus-universe-bom`"
+#, fuzzy, no-wrap
+#| msgid "`quarkus-universe-bom`"
+msgid "`quarkus-bom`"
 msgstr "`quarkus-universe-bom`"
 
 #. type: Table
