--- a/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/dev-mode-differences.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-16 02:21+0000\n"
+"POT-Creation-Date: 2021-07-22 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -154,7 +154,9 @@ msgstr "Dev Services"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/dev-mode-differences.adoc:59
-msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as DevServices.  More information can be found link:datasource.adoc#dev-services[here]."
+#, fuzzy
+#| msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as DevServices.  More information can be found link:datasource.adoc#dev-services[here]."
+msgid "When testing or running in dev-mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as Dev Services.  More information can be found link:datasource.adoc#dev-services[here]."
 msgstr "Quarkusでは、テストや開発モードで実行する際に、ゼロコンフィグのデータベースをすぐに提供することができますが、これはDevServicesと呼ばれる機能です。詳細については link:datasource.adoc#dev-services[こちら]をご覧ください。"
 
 #. type: Title ===
