--- a/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-29 02:21+0000\n"
+"POT-Creation-Date: 2021-07-22 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1296,7 +1296,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mongodb-panache.adoc:674
 #, no-wrap
 msgid ""
-"import io.quarkus.mongodb.panache.ProjectionFor;\n"
+"import io.quarkus.mongodb.panache.common.ProjectionFor;\n"
 "import org.bson.codecs.pojo.annotations.BsonProperty;\n"
 msgstr ""
 
