--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-platform-platform-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-platform-platform-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-07-22 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -61,8 +61,9 @@ msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-platform-platform-config.adoc:20
-#, no-wrap
-msgid "`io.quarkus`"
+#, fuzzy, no-wrap
+#| msgid "`io.quarkus`"
+msgid "`io.quarkus.platform`"
 msgstr "`io.quarkus`"
 
 #. type: Table
@@ -79,8 +80,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-platform-platform-config.adoc:29
-#, no-wrap
-msgid "`quarkus-universe-bom`"
+#, fuzzy, no-wrap
+#| msgid "`quarkus-universe-bom`"
+msgid "`quarkus-bom`"
 msgstr "`quarkus-universe-bom`"
 
 #. type: Table
