--- a/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-21 02:23+0000\n"
+"POT-Creation-Date: 2021-07-22 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -98,13 +98,16 @@ msgstr "これはデータソースの設定についての簡単な紹介です
 
 #. type: Title ===
 #: upstream/_versions/main/guides/datasource.adoc:44
-#, no-wrap
-msgid "Zero Config Setup (DevServices)"
+#, fuzzy, no-wrap
+#| msgid "Zero Config Setup (DevServices)"
+msgid "Zero Config Setup (Dev Services)"
 msgstr "ゼロコンフィグ設定（DevServices）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:49
-msgid "When testing or running in dev mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as DevServices. Depending on your database type you may need docker installed in order to use this feature. DevServices is supported for the following open source databases:"
+#, fuzzy
+#| msgid "When testing or running in dev mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as DevServices. Depending on your database type you may need docker installed in order to use this feature. DevServices is supported for the following open source databases:"
+msgid "When testing or running in dev mode Quarkus can even provide you with a zero config database out of the box, a feature we refer to as Dev Services. Depending on your database type you may need docker installed in order to use this feature. Dev Services is supported for the following open source databases:"
 msgstr "Quarkusでは、テストや開発モードで実行する際に、ゼロコンフィグでデータベースをすぐに提供することができます。これは、私たちがDevServicesと呼ぶ機能です。データベースの種類によっては、この機能を使用するためにdockerをインストールする必要があります。DevServicesは以下のオープンソースデータベースでサポートされています。"
 
 #. type: Plain text
@@ -144,7 +147,9 @@ msgstr "MSSQL (コンテナ)(要ライセンス承諾)"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:62
-msgid "If you want to use DevServices then all you need to do is include the relevant extension for the type of database you want (either reactive or JDBC, or both), and don't configure a database URL, username and password, Quarkus will provide the database and you can just start coding without worrying about config."
+#, fuzzy
+#| msgid "If you want to use DevServices then all you need to do is include the relevant extension for the type of database you want (either reactive or JDBC, or both), and don't configure a database URL, username and password, Quarkus will provide the database and you can just start coding without worrying about config."
+msgid "If you want to use Dev Services then all you need to do is include the relevant extension for the type of database you want (either reactive or JDBC, or both), and don't configure a database URL, username and password, Quarkus will provide the database and you can just start coding without worrying about config."
 msgstr "DevServicesを使用する場合、必要なのは使用するデータベースの種類（リアクティブまたはJDBC、またはその両方）に応じた関連するエクステンションを含めることだけで、データベースのURLやユーザー名、パスワードを設定する必要はありません。Quarkusがデータベースを提供するので、ユーザーは設定に煩わされることなく、ただコーディングを開始することが出来ます。"
 
 #. type: Plain text
@@ -971,7 +976,9 @@ msgstr "キーに余分なビットがあることに注意してください。
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:438
-msgid "Even when only one database extension is installed, named databases need to specify at least one build time property so that Quarkus knows they exist. Generally this will be the `db-kind` property, although you can also specify DevServices properties to create named datasources (covered later in this guide)."
+#, fuzzy
+#| msgid "Even when only one database extension is installed, named databases need to specify at least one build time property so that Quarkus knows they exist. Generally this will be the `db-kind` property, although you can also specify DevServices properties to create named datasources (covered later in this guide)."
+msgid "Even when only one database extension is installed, named databases need to specify at least one build time property so that Quarkus knows they exist. Generally this will be the `db-kind` property, although you can also specify Dev Services properties to create named datasources (covered later in this guide)."
 msgstr "データベースエクステンションが1つしかインストールされていない場合でも、名前付きデータベースは、Quarkusがその存在を認識できるように、少なくとも1つのビルド時プロパティを指定する必要があります。通常、これは `db-kind` プロパティになりますが、名前付きデータソースを作成するためにDevServicesプロパティを指定することもできます（このガイドで後述します）。"
 
 #. type: Title ===
@@ -1070,28 +1077,35 @@ msgstr "これを上書きするには、`transactions` 構成プロパティー
 #. type: Title ==
 #: upstream/_versions/main/guides/datasource.adoc:492
 #, no-wrap
-msgid "DevServices (Configuration Free Databases)"
+msgid "Dev Services (Configuration Free Databases)"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:497
-msgid "As mentioned above Quarkus supports a feature called DevServices that allows you to create datasources without any config. If you have a database extension that supports it and no config is provided, Quarkus will automatically start a database (either using Testcontainers, or by starting a Java DB in process), and automatically configure a connection to this database."
+#, fuzzy
+#| msgid "As mentioned above Quarkus supports a feature called DevServices that allows you to create datasources without any config. If you have a database extension that supports it and no config is provided, Quarkus will automatically start a database (either using Testcontainers, or by starting a Java DB in process), and automatically configure a connection to this database."
+msgid "As mentioned above Quarkus supports a feature called Dev Services that allows you to create datasources without any config. If you have a database extension that supports it and no config is provided, Quarkus will automatically start a database (either using Testcontainers, or by starting a Java DB in process), and automatically configure a connection to this database."
 msgstr "前述の通り、QuarkusはDevServicesと呼ばれる機能をサポートしており、設定なしでデータソースを作成することができます。サポートしているデータベースエクステンションがあり、設定が提供されていない場合、Quarkusは自動的にデータベースを起動し（Testcontainersを使用するか、インプロセスのJava DBを起動する）、このデータベースへの接続を自動的に設定します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:501
-msgid "Production databases need to be configured as normal, so if you want to include a production database config in your application.properties and continue to use DevServices we recommend that you use the `%prod.` profile to define your database settings."
+#, fuzzy
+#| msgid "Production databases need to be configured as normal, so if you want to include a production database config in your application.properties and continue to use DevServices we recommend that you use the `%prod.` profile to define your database settings."
+msgid "Production databases need to be configured as normal, so if you want to include a production database config in your application.properties and continue to use Dev Services we recommend that you use the `%prod.` profile to define your database settings."
 msgstr "本番環境のデータベースは通常通り構成する必要があります。そのため、本番環境のデータベースの構成をapplication.propertiesに含めてDevServicesを継続して使用したい場合は、 `%prod.` プロファイルを使用してデータベースの設定を定義することをお勧めします。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/datasource.adoc:502
-#, no-wrap
-msgid "Configuring DevServices"
-msgstr ""
+#, fuzzy, no-wrap
+#| msgid "Zero Config Setup (DevServices)"
+msgid "Configuring Dev Services"
+msgstr "ゼロコンフィグ設定（DevServices）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:505
-msgid "DevServices supports the following config options:"
+#, fuzzy
+#| msgid "DevServices supports the following config options:"
+msgid "Dev Services supports the following config options:"
 msgstr "DevServicesは、以下の構成オプションをサポートしています。"
 
 #. type: Title ===
@@ -1104,7 +1118,7 @@ msgstr "名前付きデータソース"
 #: upstream/_versions/main/guides/datasource.adoc:513
 #, fuzzy
 #| msgid "When using DevServices the default datasource will always be created, but to specify a named datasource you need to have at least one build time property so Quarkus knows to create the datasource. In general you will usually either specify the `db-kind` property, or explicitly enable DevDb: `quarkus.datasource.\"named\".devservices=true`."
-msgid "When using DevServices the default datasource will always be created, but to specify a named datasource you need to have at least one build time property so Quarkus knows to create the datasource. In general you will usually either specify the `db-kind` property, or explicitly enable DevDb: `quarkus.datasource.\"name\".devservices.enabled=true`."
+msgid "When using Dev Services the default datasource will always be created, but to specify a named datasource you need to have at least one build time property so Quarkus knows to create the datasource. In general you will usually either specify the `db-kind` property, or explicitly enable DevDb: `quarkus.datasource.\"name\".devservices.enabled=true`."
 msgstr "DevServicesを使用する場合、デフォルトのデータソースは常に作成されますが、名前付きのデータソースを指定するには、Quarkusがデータソースの作成を認識できるように、少なくとも1つのビルド時プロパティが必要です。一般的には、 `db-kind` プロパティを指定するか、明示的にDevDb: `quarkus.datasource.\"named\".devservices=true` を有効にします。"
 
 #. type: Title ==
